variability: start implementing configuration template hydration transform

--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-17 Wed 17:53]
+#+CAPTION: Clock summary at [2019-04-17 Wed 17:59]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *61:26* |       |       | 100.0 |
+| *Total time*                                           | *61:31* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 61:26   |       |       | 100.0 |
-| Active                                                 |         | 61:26 |       | 100.0 |
+| Stories                                                | 61:31   |       |       | 100.0 |
+| Active                                                 |         | 61:31 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  4:21 |   7.1 |
 | Sprint and product backlog grooming                    |         |       |  6:04 |   9.9 |
 | Create a video demo for the previous sprint's features |         |       |  1:35 |   2.6 |
@@ -33,7 +33,7 @@
 | Nursing nightlies                                      |         |       |  0:40 |   1.1 |
 | Fix snags with emacs                                   |         |       |  5:50 |   9.5 |
 | Profiles as meta-model elements                        |         |       |  8:01 |  13.0 |
-| Redesign annotations model                             |         |       | 21:25 |  34.9 |
+| Redesign annotations model                             |         |       | 21:30 |  34.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -647,6 +647,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-17 Wed 17:54]--[2019-04-17 Wed 17:59] =>  0:05
     CLOCK: [2019-04-17 Wed 17:50]--[2019-04-17 Wed 17:53] =>  0:03
     CLOCK: [2019-04-17 Wed 17:16]--[2019-04-17 Wed 17:49] =>  0:33
     CLOCK: [2019-04-17 Wed 14:02]--[2019-04-17 Wed 17:15] =>  3:13
