--- a/doc/agile/v1/sprint_backlog_15.org
+++ b/doc/agile/v1/sprint_backlog_15.org
@@ -13,27 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-17 Wed 17:59]
+#+CAPTION: Clock summary at [2019-04-18 Thu 07:23]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *61:31* |       |       | 100.0 |
+| *Total time*                                           | *62:38* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 61:31   |       |       | 100.0 |
-| Active                                                 |         | 61:31 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  4:21 |   7.1 |
-| Sprint and product backlog grooming                    |         |       |  6:04 |   9.9 |
-| Create a video demo for the previous sprint's features |         |       |  1:35 |   2.6 |
-| Fix issues with emacs                                  |         |       |  2:01 |   3.3 |
+| Stories                                                | 62:38   |       |       | 100.0 |
+| Active                                                 |         | 62:38 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  4:21 |   6.9 |
+| Sprint and product backlog grooming                    |         |       |  6:04 |   9.7 |
+| Create a video demo for the previous sprint's features |         |       |  1:35 |   2.5 |
+| Fix issues with emacs                                  |         |       |  2:01 |   3.2 |
 | Fix issues with nightly build                          |         |       |  0:08 |   0.2 |
 | Add diffing support to string asserter                 |         |       |  1:00 |   1.6 |
-| C# generation is borked                                |         |       |  4:12 |   6.8 |
-| Reactivate the boilerplate tests                       |         |       |  5:58 |   9.7 |
+| C# generation is borked                                |         |       |  4:12 |   6.7 |
+| Reactivate the boilerplate tests                       |         |       |  5:58 |   9.5 |
 | Update to clang8                                       |         |       |  0:11 |   0.3 |
-| Nursing nightlies                                      |         |       |  0:40 |   1.1 |
-| Fix snags with emacs                                   |         |       |  5:50 |   9.5 |
-| Profiles as meta-model elements                        |         |       |  8:01 |  13.0 |
-| Redesign annotations model                             |         |       | 21:30 |  34.9 |
+| Nursing nightlies                                      |         |       |  0:49 |   1.3 |
+| Fix snags with emacs                                   |         |       |  6:00 |   9.6 |
+| Profiles as meta-model elements                        |         |       |  8:01 |  12.8 |
+| Redesign annotations model                             |         |       | 22:18 |  35.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -346,6 +346,7 @@ several in the literature.
 
 *** STARTED Nursing nightlies                                         :story:
     :LOGBOOK:
+    CLOCK: [2019-04-18 Thu 06:15]--[2019-04-18 Thu 06:24] =>  0:09
     CLOCK: [2019-04-17 Wed 07:01]--[2019-04-17 Wed 07:19] =>  0:18
     CLOCK: [2019-04-16 Tue 06:50]--[2019-04-16 Tue 07:12] =>  0:22
     :END:
@@ -361,6 +362,7 @@ Time taken fixing assorted issues with nightly builds.
 
 *** STARTED Fix snags with emacs                                      :story:
     :LOGBOOK:
+    CLOCK: [2019-04-18 Thu 06:25]--[2019-04-18 Thu 06:35] =>  0:10
     CLOCK: [2019-04-14 Sun 14:46]--[2019-04-14 Sun 15:09] =>  0:23
     CLOCK: [2019-04-11 Thu 09:16]--[2019-04-11 Thu 09:20] =>  0:04
     CLOCK: [2019-04-11 Thu 08:02]--[2019-04-11 Thu 09:15] =>  1:13
@@ -647,6 +649,7 @@ Notes:
 
 *** STARTED Redesign annotations model                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-18 Thu 06:35]--[2019-04-18 Thu 07:23] =>  0:48
     CLOCK: [2019-04-17 Wed 17:54]--[2019-04-17 Wed 17:59] =>  0:05
     CLOCK: [2019-04-17 Wed 17:50]--[2019-04-17 Wed 17:53] =>  0:03
     CLOCK: [2019-04-17 Wed 17:16]--[2019-04-17 Wed 17:49] =>  0:33
